--- a/letter.html
+++ b/letter.html
@@ -30,7 +30,7 @@ body {
   text-align: center;
   margin: 50px;
   color: #333;
-  background-image: url('https://assets.onecompiler.app/43b9vdsvj/43eb4cz4y/download%20(18).jpg	');
+  background-image: url('https://assets.onecompiler.app/43b9vdsvj/43eb4cz4y/flower%20bg.jpg');
         }
     
         h1 {
